--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -205,7 +205,7 @@
                                     <h4 id="h4GreatSuccessRate"></h4>
                                     <div class="row">
                                         <div class="col-lg-6">
-                                            <div class="form-group input-group">
+                                            <div class="form-group input-group" style="margin-bottom: 0px;">
                                                 <input type="number" pattern="\d*" min="15" max="69" class="form-control" id="GreatSuccessRate" value=60
                                                     onclick="this.select()">
                                                 <span class="input-group-addon" id="Display_UPRate"
@@ -222,18 +222,15 @@
                                         </div>
                                     </div>
                                     <h4 id="h4MapLimit"></h4>
-                                    <p>
-                                        <select class="form-control" id="MapLimit">
-                                            <option value=6 id="chapter6"></option>
-                                            <option value=7 id="chapter7"></option>
-                                            <option value=8 id="chapter8"></option>
-                                            <option value=9 id="chapter9"></option>
-                                            <option value=10 id="chapter10"></option>
-                                            <option value=11 id="chapter11"></option>
-                                            <option value=12 id="chapter12" selected></option>
-
-                                        </select>
-                                    </p>
+                                    <select class="form-control" id="MapLimit">
+                                        <option value=6 id="chapter6"></option>
+                                        <option value=7 id="chapter7"></option>
+                                        <option value=8 id="chapter8"></option>
+                                        <option value=9 id="chapter9"></option>
+                                        <option value=10 id="chapter10"></option>
+                                        <option value=11 id="chapter11"></option>
+                                        <option value=12 id="chapter12" selected></option>
+                                    </select>
                                 </div>
                                 <div class="col-lg-5">
                                     <div class="row">
@@ -274,7 +271,6 @@
                                 <div data-toggle="collapse" href="#MissionTable_panel" class="" aria-expanded="true" style="cursor: pointer;">
                                     <span class="glyphicon glyphicon-align-justify" style="font-size: 14px;" id="MissionTableTitle"></span>
                                 </div>
-                                <!-- glyphicon glyphicon-menu-hamburger -->
                             </div>
                             <div id="MissionTable_panel" class="panel-collapse collapse in" aria-expanded="true">
                                 <div class="panel-body" style="padding-left: 0px;padding-top: 0px;padding-right: 0px;padding-bottom: 0px;">
